[gd_scene load_steps=10 format=3 uid="uid://buuirls5xc2w3"]

[ext_resource type="Script" path="res://scenes/UIScenes/InGameUIControls.gd" id="1_037vj"]
[ext_resource type="FontFile" uid="uid://ds6ogu8jvy8q2" path="res://fonts/Shrikhand/Shrikhand-Regular.ttf" id="2_75h2f"]
[ext_resource type="PackedScene" uid="uid://hsrdrsiwe51v" path="res://meshes/Goober.glb" id="3_q7leu"]

[sub_resource type="Animation" id="Animation_1dot4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OverlayBlack:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 646)]
}

[sub_resource type="Animation" id="Animation_50h6v"]
resource_name = "SlideInTransition"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OverlayBlack:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 646), Vector2(1152, 646)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_maq4m"]
_data = {
"RESET": SubResource("Animation_1dot4"),
"SlideOutTransition": SubResource("Animation_50h6v")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_u1885"]

[sub_resource type="Sky" id="Sky_n5urn"]
sky_material = SubResource("PanoramaSkyMaterial_u1885")

[sub_resource type="Environment" id="Environment_nue8f"]
background_color = Color(0, 0.568627, 0.811765, 0)
background_energy_multiplier = 1.05
sky = SubResource("Sky_n5urn")
ambient_light_source = 2
ambient_light_color = Color(0.862745, 1, 0.756863, 1)
ambient_light_energy = 0.05
reflected_light_source = 2

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_037vj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0
color = Color(0.208015, 0.329641, 0.237485, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 131.0
offset_top = 468.0
offset_right = -703.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_maq4m")
}
autoplay = "RESET"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 238.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_75h2f")
theme_override_font_sizes/font_size = 116
text = "GOOBER GARDEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3DUI" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="3DUI"]
offset_left = 556.0
offset_top = 144.0
offset_right = 1012.0
offset_bottom = 494.0

[node name="SubViewport" type="SubViewport" parent="3DUI/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="3DUI/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, -1, 0, -3)
environment = SubResource("Environment_nue8f")
projection = 1
size = 5.04

[node name="Goober" parent="3DUI" instance=ExtResource("3_q7leu")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="3DUI"]
transform = Transform3D(0.808013, -0.273834, -0.521661, 0.25, -0.642402, 0.724444, -0.533494, -0.715776, -0.450611, 1, 1, -2)

[node name="OverlayBlack" type="ColorRect" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
